included stable toolchain in workflow file

--- a/.github/workflows/run-bitcoin-simulation.yml
+++ b/.github/workflows/run-bitcoin-simulation.yml
@@ -16,6 +16,8 @@ jobs:
         uses: actions-rs/toolchain@v1
         with:
           profile: minimal
+          toolchain: stable
+          override: true
 
       - name: Build
         run: cargo build --release
